<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Dialer</string>
    <string name="app_launcher_name">Phone</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>
    <string name="default_dialer_required_for_security">This app MUST be set as the default Phone app to function. Call security features will not work without this setting. Press \"Set as Default\" to continue.</string>
    <string name="default_dialer_blocking_message">To protect your child, this phone app needs to be set as the default. This enables important safety features that control who can contact your child.\n\nWhen you tap the button below, you\'ll be taken to Settings. Look for \"Phone app\" and select this app from the list.</string>
    <string name="default_dialer_security_note">Your child can only receive calls from contacts you\'ve saved to their device. This ensures they only communicate with people you approve.</string>
    <string name="set_as_default">Open Settings</string>
    <string name="security_icon">Security</string>
    <string name="allow_displaying_over_other_apps">Please allow displaying over other apps for reliable behaviour</string>

    <!-- Contacts -->
    <string name="could_not_access_contacts">Could not access your contacts</string>

    <!-- Recents -->
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="request_access">Request access</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="show_grouped_calls">Show grouped calls</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="show_call_details">Show call details</string>

    <!-- Dialpad -->
    <string name="dialpad">Dialpad</string>
    <string name="asterisk">Asterisk</string>
    <string name="hashtag">Hashtag</string>
    <string name="call_number">Call number</string>
    <string name="dialpad_beeps">Enable beeps on dialpad button clicks</string>
    <string name="dialpad_vibrations">Enable vibrations on dialpad button clicks</string>

    <!-- Dialer -->
    <string name="dialer">Dialer</string>
    <string name="accept">Accept</string>
    <string name="accept_call">Accept call</string>
    <string name="decline">Decline</string>
    <string name="decline_call">Decline call</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="select_sim">Select a SIM for this call</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="calls">Calls</string>
    <string name="turn_microphone_on">Turn microphone on</string>
    <string name="turn_microphone_off">Turn microphone off</string>
    <string name="turn_speaker_on">Turn speaker on</string>
    <string name="turn_speaker_off">Turn speaker off</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="end_call">End call</string>
    <string name="hold_call">Hold call</string>
    <string name="resume_call">Resume call</string>
    <string name="call_on_hold">On Hold</string>
    <string name="call_swap">Swap calls</string>
    <string name="call_merge">Merge calls</string>
    <string name="call_split">Split call</string>
    <string name="call_add">Add call</string>
    <string name="conference_manage">Manage conference call</string>
    <string name="conference">Conference</string>
    <string name="audio_route_speaker">Speaker</string>
    <string name="audio_route_earpiece">Earpiece</string>
    <string name="audio_route_bluetooth">Bluetooth</string>
    <string name="audio_route_wired_headset">Wired Headset</string>
    <string name="audio_route_wired_or_earpiece">Wired or Earpiece</string>
    <string name="choose_audio_route">Choose audio route</string>
    <string name="calling_blocked_number">The number you are calling is blocked</string>

    <!-- Speed dial -->
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>

    <!-- Settings -->
    <string name="group_subsequent_calls">Group subsequent calls with the same number at the call log</string>
    <string name="open_dialpad_by_default">Open the dialpad by default when the app opens</string>
    <string name="disable_proximity_sensor">Disable proximity sensor during calls</string>
    <string name="disable_swipe_to_answer">Replace swiping at responding to incoming calls with clicking</string>
    <string name="show_incoming_calls_full_screen">Always display incoming calls on full screen</string>
    <string name="hide_dialpad_numbers">Hide dialpad numbers</string>
    <string name="export_call_history">Export call history</string>
    <string name="import_call_history">Import call history</string>

    <!-- Contact Requests -->
    <string name="contact_requests">Contact Requests</string>
    <string name="no_contact_requests">No contact requests yet</string>
    <string name="tap_plus_to_request">Tap + to request a new contact</string>
    <string name="add_contact_request">Add contact request</string>
    <string name="request_contact">Request Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit_request">Submit Request</string>
    <string name="cancel">Cancel</string>
    <string name="contact_request_submitted">Contact request submitted</string>
    <string name="please_enter_first_name">Please enter a first name</string>
    <string name="please_enter_name">Please enter a contact name</string>
    <string name="please_enter_valid_phone">Please enter a valid phone number</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="pending_requests">Pending (%d)</string>
    <string name="approved_requests">Approved (%d)</string>
    <string name="rejected_requests">Rejected (%d)</string>
    <string name="segment_pending">Pending</string>
    <string name="segment_approved">Approved</string>
    <string name="segment_rejected">Rejected</string>
    <string name="no_pending_requests">No pending requests</string>
    <string name="no_approved_requests">No approved requests</string>
    <string name="no_rejected_requests">No rejected requests</string>
    <string name="no_contact_requests_found">No contact requests found</string>
    <string name="requested_time_ago">Requested %s</string>
    <string name="request_status_pending">PENDING</string>
    <string name="request_status_approved">APPROVED</string>
    <string name="request_status_rejected">REJECTED</string>
    <string name="contact_request_approved_title">Contact Request Approved</string>
    <string name="contact_request_approved_text">Your request for %s has been approved</string>
    <string name="contact_request_rejected_title">Contact Request Rejected</string>
    <string name="contact_request_rejected_text">Your request for %s has been rejected</string>
    <string name="delete_rejected_requests">Delete all rejected</string>

    <!-- Demo Mode -->
    <string name="demo_mode">Demo Mode (for video recording)</string>

    <!-- FAQ -->
    <string name="faq_1_title">I hear incoming calls, but the screen doesn\'t turn on. What can I do?</string>
    <string name="faq_1_text">Such issues can have many device and system specific reasons, hard to say in general. You should look around in your device settings and make sure that the app is allowed to pop up when in background and allow displaying over other apps.</string>

    <!--
        Haven't found some strings? There's more at
        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
    -->
</resources>
